[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Vortex/Vortex1.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Cutscene/Choice.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Cutscene/Dialogs.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Vortex/Vortex1/MCasttle1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Vortex/Vortex1/MCasttle2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Vortex/Vortex1/MCasttleJ.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Entity/Main/Main.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/Characters/sprite NIÃ‘O.png" type="Texture" id=8]
[ext_resource path="res://sprites/Characters/sprite MADRE.png" type="Texture" id=9]
[ext_resource path="res://tiled/Vortex1/MCasttleJ.png" type="Texture" id=10]
[ext_resource path="res://tiled/Vortex1/MCasttle2.png" type="Texture" id=11]
[ext_resource path="res://tiled/Vortex1/MCasttle1.png" type="Texture" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 100.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 60.0
height = 160.0

[sub_resource type="CircleShape2D" id=4]
radius = 150.0

[sub_resource type="CircleShape2D" id=5]
radius = 100.0

[node name="Vortex1" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainCharacter" parent="." instance=ExtResource( 7 )]
position = Vector2( 108.122, -199.661 )

[node name="Maps" type="Node2D" parent="."]
position = Vector2( 0, -500 )

[node name="SpriteJ" type="Sprite" parent="Maps"]
position = Vector2( -980, -2060 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Sprite1" type="Sprite" parent="Maps"]
position = Vector2( -130, -530 )
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="Maps"]
position = Vector2( 2979.99, -383.372 )
scale = Vector2( -1, 1 )
texture = ExtResource( 11 )

[node name="MCasttleJ" parent="Maps" instance=ExtResource( 6 )]
position = Vector2( -980, -1770 )
scale = Vector2( 2, 2 )

[node name="MCasttle1" parent="Maps" instance=ExtResource( 4 )]

[node name="MCasttle2" parent="Maps" instance=ExtResource( 5 )]
position = Vector2( 2980, -370 )
scale = Vector2( -1, 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Piso1" type="Area2D" parent="Node2D"]
position = Vector2( 1250, -1840 )
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Piso1"]
shape = SubResource( 1 )

[node name="Piso2" type="Area2D" parent="Node2D"]
position = Vector2( 1635, -1840 )
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Piso2"]
shape = SubResource( 1 )

[node name="StaticBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 110, -80 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Nino" type="KinematicBody2D" parent="."]
position = Vector2( 400, -1200 )

[node name="Sprite" type="Sprite" parent="Nino"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nino"]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="Nino"]
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nino/Area2D"]
shape = SubResource( 4 )

[node name="Mama" type="KinematicBody2D" parent="."]
position = Vector2( -600, -2000 )

[node name="Sprite" type="Sprite" parent="Mama"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mama"]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="Mama"]
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mama/Area2D"]
shape = SubResource( 4 )

[node name="Boss" type="Area2D" parent="."]
position = Vector2( 2100, -1090 )
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
shape = SubResource( 5 )

[node name="Choice" parent="." instance=ExtResource( 2 )]

[node name="Dialog" parent="." instance=ExtResource( 3 )]
